fix overflow for mobile

--- a/src/components/StatusDashboard/styles.module.css
+++ b/src/components/StatusDashboard/styles.module.css
@@ -42,6 +42,94 @@
   background-color: transparent;
 }
 
+
+.migrations_table {
+  font-size: small;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.migrations_table thead {
+  text-wrap: nowrap;
+}
+
+.migrations_table tr.collapsed,
+.migrations_table tbody.collapsed {
+  display: none;
+}
+
+.migrations_table th:only-child {
+  text-align: left;
+}
+
+.migrations_table th {
+  position: relative;
+  cursor: pointer;
+  display: table-cell;
+  padding: 3px 8px;
+  text-align: center;
+  user-select: none;
+}
+
+.migrations_table th[colspan]::after {
+  position: inherit;
+  content: " ▿";
+  right: auto;
+  top: auto;
+}
+
+.migrations_table thead th[colspan].collapsed::after {
+  content: " ▹";
+}
+
+.migrations_table th:not(colspan)::after {
+  font-size: smaller;
+  position: absolute;
+  right: 1px;
+  top: 6px;
+}
+
+.migrations_table th.ascending::after {
+  content: "△";
+}
+
+.migrations_table th.descending::after {
+  content: "▽";
+}
+
+.migrations_table td:first-child {
+  text-align: left;
+}
+
+.migrations_table td {
+  display: table-cell;
+  padding: 3px;
+  text-align: right;
+}
+
+.migrations_table td:first-child {
+  cursor: pointer;
+}
+
+.migrations_table td:first-child:hover {
+  color: var(--ifm-color-primary);
+  text-decoration: underline;
+}
+
+.migrations_table .button-group {
+  float: right;
+}
+
+.migrations_table .migration {
+  background-color: #ccc;
+  cursor: pointer;
+  text-align: center;
+  margin: 2px;
+  padding: 3px;
+}
+
 .status_dashboard {
   margin: 0;
   max-width: 100%;
