--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -265,93 +265,6 @@ not pretty but it's the best we can do so far */
   justify-content: center;
 }
 
-#current_migrations .card__body table {
-  font-size: small;
-  display: table;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-
-#current_migrations .card__body thead {
-  text-wrap: nowrap;
-}
-
-#current_migrations .card__body tr.collapsed,
-#current_migrations .card__body tbody.collapsed {
-  display: none;
-}
-
-#current_migrations .card__body th:only-child {
-  text-align: left;
-}
-
-#current_migrations .card__body th {
-  position: relative;
-  cursor: pointer;
-  display: table-cell;
-  padding: 3px 8px;
-  text-align: center;
-  user-select: none;
-}
-
-#current_migrations .card__body th[colspan]::after {
-  position: inherit;
-  content: " ▿";
-  right: auto;
-  top: auto;
-}
-
-#current_migrations .card__body th[colspan].collapsed::after {
-  content: " ▹";
-}
-
-#current_migrations .card__body th:not(colspan)::after {
-  font-size: smaller;
-  position: absolute;
-  right: 1px;
-  top: 6px;
-}
-
-#current_migrations .card__body th.ascending::after {
-  content: "△";
-}
-
-#current_migrations .card__body th.descending::after {
-  content: "▽";
-}
-
-#current_migrations .card__body td:first-child {
-  text-align: left;
-}
-
-#current_migrations .card__body td {
-  display: table-cell;
-  padding: 3px;
-  text-align: right;
-}
-
-#current_migrations .card__body td:first-child {
-  cursor: pointer;
-}
-
-#current_migrations .card__body td:first-child:hover {
-  color: var(--ifm-color-primary);
-  text-decoration: underline;
-}
-
-#current_migrations .card__header .button-group {
-  float: right;
-}
-
-#current_migrations .migration {
-  background-color: #ccc;
-  cursor: pointer;
-  text-align: center;
-  margin: 2px;
-  padding: 3px;
-}
-
 #azure_pipelines_usage .card__body canvas,
 #github_actions_usage .card__body canvas,
 #travis_ci_usage .card__body canvas {
